# RustChatClientServer

./: README.md
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml  rust.db
chat/server/src/: main.rs
