[package]
name = "server"
version = "0.1.0"
authors = ["tensor-programming <abeltensor@tensor-programming.com>"]

[dependencies]
sqlite = "0.26.0"               # The package provides an interface to SQLite.
magic-crypt = "3.1.9"      # MagicCrypt is a Java/PHP/NodeJS/Rust library to encrypt/decrpyt strings, files, or data, using Data …
colored = "2.0.0"              # The most simple way to add colors in your terminal
rand = "0.8.4"              # Random number generators and other randomness functionality.
chrono = "0.4.19"                   # Date and time library for Rust

